--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "cf-workers-telegram-bot"
+name = "adjacent-book-bot"
 main = "packages/worker/dist/worker/src/worker.mjs"
 
 workers_dev = true
@@ -6,8 +6,8 @@ compatibility_date = "2023-10-24"
 
 build.command = "npm install && npm run build:worker"
 
-[ai]
-binding = "AI"
+#[ai]
+#binding = "AI"
 
 [[d1_databases]]
 binding = "DB"
